translations for tooltips

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1304,7 +1304,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">গল্পটির গঠন বিন্যাস বা অবস্থান প্রয়োজন মতন বদলে নিন</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1409,7 +1409,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">প্রশ্ন</string>
   <string name="original_content">অনুগ্রহ করে একমাত্র নিজস্ব রচনাশৈলী মমস্প্রেসোর মঞ্চে পাবলিশ করবেন। অন্যের রচনা,যদি তা স্বল্পাংশও কপি করা হয় তাহলেও আমাদের মঞ্চে গ্রাহ্য করা হবেনা।</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">বুঝতে পেরেছি</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1475,16 +1475,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">লিডারবোর্ড এখনও তৈরি হয়নি। দয়া করে আগামীকাল ফিরে আসুন।</string>
   <string name="yesterday">গতকাল </string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">"আসুন, আপনাকে আপনার প্রথম ব্লগটি লিখতে সাহায্য করা যাক!বেছে নিন একটি চ্যালেঞ্জ অথবা 'লেখা শুরু করুন' -এ গিয়ে ক্লিক করুন</string>
+  <string name="coachmark_article_2">আপনি ছবি যোগ করতে পারেন এবং প্রয়োজনমত লেখার ফর্ম্যাট বদলাতে পারেন</string>
+  <string name="coachmark_article_3">হয়ে গেলে আপনার গল্পটি পাবলিশ করুন</string>
+  <string name="coachmark_article_4">ব্লগের ট্যাগগুলো মায়েদের আপনার গল্প খুঁজে পেতে সাহায্য করে</string>
+  <string name="coachmark_article_5">আকর্ষক ছবি যুক্ত ব্লগ বেশিসংখ্যক পাঠক পাঠ করেন</string>
+  <string name="yay_all_done">দারুণ! আপনি সবকিছু ঠিকভাবে করেছেন</string>
+  <string name="view_moderation_guidelines">মডারেশন গাইডলাইনস দেখুন</string>
+  <string name="get_tips_ideas">অন্য লেখিকাদের থেকে সাহায্য ও পরামর্শ পান</string>
+  <string name="dont_stop_magic">আপনার অসাধারণ সৃজন প্রতিভাকে থামতে দেবেন না!</string>
+  <string name="join_creator_group">যোগ দিন লেখিকা মঞ্চে</string>
+  <string name="create_more">আরো লিখুন!</string>
+  <string name="go_to_blog">আপনার ব্লগে যান</string>
+  <string name="skip_the_tour">স্কিপ করতে চাই</string>
+  <string name="coachmark_story_1">আসুন, আপনাকে আপনার প্রথম শত শব্দের গল্পটি লিখতে সাহায্য করা যাক! শুরু করবার জন্য একটি বিভাগ বা চ্যালেঞ্জ বেছে নিন</string>
+  <string name="coachmark_story_2">গল্পটির জন্য বেছে নিন মনোমত ব্যাকগ্রাউন্ড</string>
+  <string name="coachmark_next">পরবর্তী</string>
+  <string name="user_story_live">আপনার শত শব্দের গল্পটি এখন প্রকাশিত</string>
+  <string name="click_to_upload_the_video">காணொளியை பதிவேற்ற இங்கே க்ளிக் செய்யுங்கள் </string>
+  <string name="choose_interesting_title">கவர்ச்சியான தலைப்பு  பார்வையாளர் கவனத்தை ஈர்க்கும் </string>
+  <string name="coachmark_story_3">হয়ে গেলে আপনার প্রথম শত শব্দের গল্পটি পাবলিশ করুন</string>
 </resources>
