--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1320,7 +1320,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">अपनी पसंद के अनुसार  अपनी कहानी की स्थिति याआगे बढ़ाएं</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1425,7 +1425,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">सवाल</string>
   <string name="original_content">मॉम्सप्रेस्सो पर कृपया केवल खुद का लिखा मौलिक कंटेंट प्रकाशित करें. किसी भी अन्य स्रोत से आंशिक रूप से कॉपी किया गया कंटेंट भी स्वीकार नहीं किया  जाएगा .</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">ठीक है ,समझ आ गया</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1491,16 +1491,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">लीडरबोर्ड अभी तक उत्पन्न नहीं हुआ है। कृपया कल वापस आइए।</string>
   <string name="yesterday">बीता कल</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">"हमें आपका  पहला ब्लॉग लिखने में आपकी मदद करने दें .शुरू करने के लिए एक चैलेंज का चयन करें या बस 'लिखना शुरू करें' पर क्लिक करें </string>
+  <string name="coachmark_article_2">आप अपनी ज़रूरत के अनुसार इमेज एड कर  सकते हैं और कंटेंट  को फॉर्मेट  कर सकते हैं .</string>
+  <string name="coachmark_article_3">सब हो जाने के बाद ,पोस्ट प्रकाशित करें </string>
+  <string name="coachmark_article_4">टैग से  माँओं को आपका  ब्लॉग खोजने में मदद मिलेगी</string>
+  <string name="coachmark_article_5">एक दिलचस्प इमेज वाले ब्लॉग को अधिक पाठक मिलते हैं</string>
+  <string name="yay_all_done">वाह! आपने  सब कर दिया</string>
+  <string name="view_moderation_guidelines">मॉडरेशन दिशानिर्देश देखें</string>
+  <string name="get_tips_ideas">अन्य रचनाकारों से सुझाव या विचार प्राप्त करें </string>
+  <string name="dont_stop_magic">आप जो भी जादू क्रिएट कर रहे थे उसे रोकें नहीं</string>
+  <string name="join_creator_group">लेखक मंच में शामिल हों</string>
+  <string name="create_more">अधिक क्रिएट करें</string>
+  <string name="go_to_blog">अपने ब्लॉग पर जाएं</string>
+  <string name="skip_the_tour">छोड़ दें</string>
+  <string name="coachmark_story_1">हमें आपकी  पहली  100 शब्दों की कहानी लिखने में आपकी मदद करने दें .शुरू करने के लिए एक चैलेंज का चयन करें या  केटेगरी से शुरुआत करें </string>
+  <string name="coachmark_story_2">अपनी पसंद की पृष्ठभूमि चुनें</string>
+  <string name="coachmark_next">अगला </string>
+  <string name="user_story_live">आपकी 100 शब्दों की कहानी लाइव है !</string>
+  <string name="click_to_upload_the_video">वीडियो अपलोड करने के लिए क्लिक करें</string>
+  <string name="choose_interesting_title">दर्शकों का ध्यान खींचने के लिए एक दिलचस्प शीर्षक का उपयोग करें</string>
+  <string name="coachmark_story_3">सब हो जाने के बाद  अपनी पहली 100 शब्दों की कहानी को  प्रकाशित करें</string>
 </resources>
