--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1339,7 +1339,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">ನಿಮ್ಮ ಕಥೆಯನ್ನು ಬೇಕಾದ ರೀತಿಯಲ್ಲಿ ಹೊಂದಿಸಿ</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1444,7 +1444,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">ಪ್ರಶ್ನೆಗಳು</string>
   <string name="original_content">ದಯವಿಟ್ಟು ಸ್ವರಚಿತ ಬರಹಗಳನ್ನು ಪ್ರಕಟಿಸಿ. ಕೃತಿಚೌರ್ಯಮಾಡಿದ ಬರಹಗಳು, ಅದು ಬೇರೆ ಮೂಲಗಳಿಂದ ಸಂಪೂರ್ಣ ನಕಲು ಮಾಡಿದ್ದೇ ಇರಬಹುದು ಅಥವಾ ಭಾಗಶಃ ನಕಲು ಮಾಡಿದ ಕೃತಿಗಳೇ ಆಗಿರಬಹುದು, ಅವುಗಳನ್ನು ಇಲ್ಲಿ ಪ್ರಕಟಿಸುವಂತಿಲ್ಲ.</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">ಸರಿ. ಗೊತ್ತಾಯ್ತು</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1510,16 +1510,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">ಲೀಡರ್‌ಬೋರ್ಡ್ ಇನ್ನೂ ರಚಿಸಲಾಗಿಲ್ಲ. ದಯವಿಟ್ಟು ನಾಳೆ ಹಿಂತಿರುಗಿ.</string>
   <string name="yesterday">ನಿನ್ನೆ</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">ನಾವು ನಿಮ್ಮ ಮೊದಲ ಬ್ಲಾಗ್ ರಚಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತೇವೆ. ಒಂದು ಸವಾಲನ್ನು ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ, ಬರೆಯಿರಿ ಅಥವಾ ನೇರವಾಗಿ ಸ್ಟಾರ್ಟ್ ರೈಟಿಂಗ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="coachmark_article_2">ನೀವು ನಿಮಗೆ ಇಷ್ಟವಾದ ಇಮೇಜ್ ಮತ್ತು ಫಾರ್ಮ್ಯಾಟ್ ಗಳನ್ನು ಬಳಸಿ ನಿಮ್ಮ ಕಂಟೆಂಟ್ ರಚಿಸಬಹುದು</string>
+  <string name="coachmark_article_3">ಮುಗಿದ ಕೂಡಲೇ,  ನಿಮ್ಮ ಬರಹವನ್ನು ಪಬ್ಲಿಶ್ ಮಾಡಿ</string>
+  <string name="coachmark_article_4">ನೀವು ಬಳಸಿದ ಟ್ಯಾಗ್ ನಿಮ್ಮ ಬರಹವನ್ನು ಹುಡುಕಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ</string>
+  <string name="coachmark_article_5">ಚಂದದ ಇಮೇಜ್ ಇರುವ ಬರಹ ಜಾಸ್ತಿ ಓದುಗರನ್ನು ತಲುಪುತ್ತದೆ</string>
+  <string name="yay_all_done">ಹೌದು!!! ನೀವು ಮಾಡಿದ್ದೀರಿ</string>
+  <string name="view_moderation_guidelines">ನಿಮ್ಮ ಗೈಡ್ ಲೈನ್ಸ್ ನೋಡಿ</string>
+  <string name="get_tips_ideas">ಬೇರೆ ಕ್ರಿಯೇಟರ್ ಗಳಿಂದ ಹೊಸ ಐಡಿಯಾಗಳನ್ನು, ಸಲಹೆಗಳನ್ನು ಪಡೆಯಿರಿ</string>
+  <string name="dont_stop_magic">ನೀವು ಮಾಡುತ್ತಿದ್ದ ಜಾದೂ ನಿಲ್ಲಿಸಬೇಡಿ</string>
+  <string name="join_creator_group">ಕ್ರಿಯೇಟರ್ ಗುಂಪಿಗೆ ಸೇರಿಕೊಳ್ಳಿ</string>
+  <string name="create_more">ಇನ್ನೂ ಹೆಚ್ಚು ರಚಿಸಿ</string>
+  <string name="go_to_blog">ನಿಮ್ಮ ಬ್ಲಾಗ್ ಗೆ ಮರಳಿ</string>
+  <string name="skip_the_tour">ಇದನ್ನು ಸ್ಕಿಪ್ ಮಾಡಿ</string>
+  <string name="coachmark_story_1">ನಾವು ನಿಮ್ಮ ಮೊದಲ 100ಶಬ್ದದ ಕಥೆ ರಚಿಸಲು ಸಹಾಯ ಮಾಡುತ್ತೇವೆ. ಒಂದು ಸವಾಲನ್ನು ಆಯ್ಕೆ ಮಾಡಿಕೊಳ್ಳಿ, ಬರೆಯಿರಿ ಅಥವಾ ನೇರವಾಗಿ ಸ್ಟಾರ್ಟ್ ರೈಟಿಂಗ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="coachmark_story_2">ನಿಮಗೆ ಬೇಕಾದ ಹಿನ್ನೆಲೆ ಚಿತ್ರವನ್ನು ಆಯ್ಕೆಯನ್ನು ಮಾಡಿ</string>
+  <string name="coachmark_next">ಮುಂದೆ</string>
+  <string name="user_story_live">ನಿಮ್ಮ 100 ಶಬ್ದದ ಕಥೆ ಈಗ ಲೈವ್ ಆಗಿದೆ</string>
+  <string name="click_to_upload_the_video">ವೀಡಿಯೋ ಅಪ್ ಲೋಡ್ ಮಾಡಲು ಕ್ಲಿಕ್ ಮಾಡಿ</string>
+  <string name="choose_interesting_title">ಒಂದು ಆಕರ್ಷಕವಾದ ಶೀರ್ಷಿಕೆ ಬಳಸಿ ನೋಡುಗರ ಗಮನ ಸೆಳೆಯಿರಿ</string>
+  <string name="coachmark_story_3">ಮುಗಿದಿದೆ. ಈಗ ನಿಮ್ಮ 100 ಶಬ್ದದ ಕಥೆಯನ್ನು ಪ್ರಕಟಿಸಿ</string>
 </resources>
