--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1343,7 +1343,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">നിങ്ങളുടെ താല്പര്യം അനുസരിച്ച് കഥയുടെ സ്ഥാനം, അലൈൻമെന്റ് എന്നിവ തീരുമാനിക്കാൻ സാധിക്കും.</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1448,7 +1448,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">ചോദ്യങ്ങൾ </string>
   <string name="original_content">മോംസ്പ്രെസ്സോ സൈറ്റിൽ നിങ്ങളുടെ സ്വന്തം സൃഷ്ടികൾ പ്രസിദ്ധീകരിക്കുക. മറ്റൊരാളുടെ സൃഷ്ടിയോ അതിന്റെ ഭാഗമോ പകർത്തി മോംസ്പ്രെസ്സോയിൽ പോസ്റ്റുചെയ്യുന്നത് സ്വീകാര്യമല്ല.</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">മനസ്സിലായി</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1514,16 +1514,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">ലീഡർബോർഡ് ഇതുവരെ സൃഷ്ടിച്ചിട്ടില്ല. നാളെ മടങ്ങിവരിക.</string>
   <string name="yesterday">ഇന്നലെ</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">നിങ്ങളുടെ ആദ്യ ബ്ലോഗ് സൃഷ്ടിക്കാൻ ഞങ്ങൾ സഹായിക്കാം! ഒരു വെല്ലുവിളി തിരഞ്ഞെടുത്ത് ആരംഭിക്കാം അല്ലെങ്കിൽ \'എഴുതാൻ തുടങ്ങാം\' എന്നതിൽ ക്ലിക്കുചെയ്യുക</string>
+  <string name="coachmark_article_2">നിങ്ങൾക്ക് ആവശ്യാനുസരണം ഇമേജുകൾ ചേർക്കാനും ഉള്ളടക്കം ഫോർമാറ്റ് ചെയ്യാനും കഴിയും</string>
+  <string name="coachmark_article_3">പൂർത്തിയായാൽ നിങ്ങളുടെ സ്റ്റോറി പ്രസിദ്ധീകരിക്കുക</string>
+  <string name="coachmark_article_4">ടാഗുകൾ ചേർക്കുന്നത് നിങ്ങളുടെ ബ്ലോഗ് കണ്ടെത്താൻ അമ്മമാരെ സഹായിക്കുന്നു</string>
+  <string name="coachmark_article_5">താല്പര്യജനകമായ ഒരുചിത്രം കൂടുതൽ വായനക്കാരെ നിങ്ങളുടെ ബ്ലോഗിലേക്ക് ആകർഷിക്കുന്നു </string>
+  <string name="yay_all_done">കൊള്ളാം! നിങ്ങൾ എല്ലാം പൂർത്തിയാക്കിയിരിക്കുന്നു </string>
+  <string name="view_moderation_guidelines">മോഡറേഷൻ മാർഗ്ഗനിർദ്ദേശങ്ങൾ കാണുക</string>
+  <string name="get_tips_ideas">മറ്റ് സ്രഷ്‌ടാക്കളിൽ നിന്ന് നിർദ്ദേശങ്ങളും ആശയങ്ങളും സ്വീകരിക്കുക </string>
+  <string name="dont_stop_magic">നിങ്ങളുടെ വിസ്മയാവഹങ്ങളായ സൃഷ്ടികൾ നിർത്തരുത്</string>
+  <string name="join_creator_group">സൗഹൃദവേദിയിൽ ചേരുക</string>
+  <string name="create_more">കൂടുതൽ സൃഷ്ടിക്കുക</string>
+  <string name="go_to_blog">നിങ്ങളുടെ ബ്ലോഗിലേക്ക് പോകുക</string>
+  <string name="skip_the_tour">ടൂർ ഒഴിവാക്കുക </string>
+  <string name="coachmark_story_1">നിങ്ങളുടെ ആദ്യ 100വാക്കിലൊരുകഥ സൃഷ്ടിക്കാൻ ഞങ്ങൾ സഹായിക്കാം! ഒരു വെല്ലുവിളി അല്ലെങ്കിൽ വിഭാഗം തിരഞ്ഞെടുത്ത് ആരംഭിക്കാം.</string>
+  <string name="coachmark_story_2">നിങ്ങൾക്ക് ഇഷ്ടമുള്ള ഒരു പശ്ചാത്തലം തിരഞ്ഞെടുക്കുക</string>
+  <string name="coachmark_next">അടുത്തത് </string>
+  <string name="user_story_live">നിങ്ങളുടെ #100വാക്കിലൊരുകഥ ഇപ്പോൾ ലൈവ് ആണ്.</string>
+  <string name="click_to_upload_the_video">വീഡിയോ അപ്‌ലോഡുചെയ്യാൻ ഇവിടെ ക്ലിക്കുചെയ്യുക</string>
+  <string name="choose_interesting_title">കാഴ്ചക്കാരന്റെ ശ്രദ്ധ പിടിച്ചുപറ്റാൻ രസകരമായ ഒരു ശീർഷകം ഉപയോഗിക്കുക</string>
+  <string name="coachmark_story_3">ഫോർമാറ്റിങ് പൂർത്തിയായാൽ, നിങ്ങളുടെ ആദ്യത്തെ #100വാക്കിലൊരുകഥ പ്രസിദ്ധീകരിക്കുക!</string>
 </resources>
