--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1297,7 +1297,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">तुमच्या आवडीनुसार तुमच्या कथेच स्थान ठरवा .</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1402,7 +1402,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">प्रश्न</string>
   <string name="original_content">कृपया फक्त तुम्ही स्वतः लिहिलेले लेख प्रकाशित करा, कुठूनही कॉपी केलेले किंवा कोणत्या लेखातील थोडा कॉपी केलेला भाग असल्यासही लेख स्वीकारले जाणार नाहीत.</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">ठीक आहे, समजले</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1468,16 +1468,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">लीडरबोर्ड अद्याप व्युत्पन्न केलेला नाही. कृपया उद्या परत या.</string>
   <string name="yesterday">काल</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">तुमचा पहिला ब्लॉग तयार करण्यात मदत करू! सुरू करण्यासाठी एक आव्हान निवडा किंवा लिहायला सुरवात करा वर क्लिक करा </string>
+  <string name="coachmark_article_2">तुमच्या कथेच्या अनुषंगाने इमेज ऍड करू शकता आणि लेख फॉरमॅट करू शकता.</string>
+  <string name="coachmark_article_3">सर्व झाल्यावर तुमची कथा प्रकाशित करा.</string>
+  <string name="coachmark_article_4">टॅग्ज वाचकांना तुमचा ब्लॉग शोधण्यात मदत करतात</string>
+  <string name="coachmark_article_5">एक मनोरंजक प्रतिमा असलेल्या ब्लॉगला  अधिक वाचक मिळतात.</string>
+  <string name="yay_all_done">छान ! आपण सर्व पूर्ण केले</string>
+  <string name="view_moderation_guidelines">नियंत्रण मार्गदर्शक तत्त्वे पहा</string>
+  <string name="get_tips_ideas">इतर निर्मात्यांकडून टिपा किंवा कल्पना मिळवा</string>
+  <string name="dont_stop_magic">आपण तयार करीत असलेली जादू थांबवू नका</string>
+  <string name="join_creator_group">क्रिएटरच्या व्यासपीठात सामील व्हा</string>
+  <string name="create_more">अधिक तयार करा</string>
+  <string name="go_to_blog">आपल्या ब्लॉगवर जा</string>
+  <string name="skip_the_tour">सोडून द्या </string>
+  <string name="coachmark_story_1"> तुमची  पहिली 100 शब्दांची गोष्ट  तयार करण्यात मदत करू ! सुरू करण्यासाठी एखादे आव्हान किंवा श्रेणी निवडा .</string>
+  <string name="coachmark_story_2">तुमच्या आवडीची पार्श्वभूमी निवडा</string>
+  <string name="coachmark_next">पुढे</string>
+  <string name="user_story_live">आपली 100 शब्दांची गोष्ट लाईव्ह आहे!</string>
+  <string name="click_to_upload_the_video">व्हिडिओ अपलोड करण्यासाठी क्लिक करा</string>
+  <string name="choose_interesting_title">दर्शकाचे लक्ष वेधण्यासाठी एक मनोरंजक शीर्षक वापरा</string>
+  <string name="coachmark_story_3">एकदा झाल्यावर आपली पहिली 100 शब्दांची गोष्ट प्रकाशित करा!</string>
 </resources>
