--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1360,7 +1360,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">ਆਪਣੀ ਪਸੰਦ ਦੇ ਅਨੁਸਾਰ ਆਪਣੀ ਕਹਾਣੀ ਨੂੰ ਪੁਜੀਸ਼ਨ ਕਰੋ ਜਾਂ ਹਿਲਾਓ</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1465,7 +1465,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">ਪ੍ਰਸ਼ਨ</string>
   <string name="original_content">ਕਿਰਪਾ ਕਰਕੇ ਮੌਮਸਪ੍ਰੈਸੋ \'ਤੇ ਸਿਰਫ ਖੁਦ ਦੀ ਲਿਖੀ ਰਚਨਾ ਹੀ ਪ੍ਰਕਾਸ਼ਤ ਕਰੋ। ਚੋਰੀ ਕੀਤਾ ਕੰਟੇਂਟ ਯਾਨੀ ਕਿਸੇ ਵੀ ਸਰੋਤ ਤੋਂ ਅੰਸ਼ਕ ਤੌਰ ਤੇ ਨਕਲ ਕੀਤੇ ਗਏ ਕੰਟੇਂਟ ਨੂੰ ਵੀ ਸਵੀਕਾਰ ਨਹੀਂ ਕੀਤਾ ਜਾਵੇਗਾ</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">ਠੀਕ ਹੈ, ਸਮਝ ਆ ਗਿਆ</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1531,16 +1531,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">ਲੀਡਰਬੋਰਡ ਅਜੇ ਤਿਆਰ ਨਹੀਂ ਕੀਤਾ ਗਿਆ ਹੈ. ਕੱਲ੍ਹ ਵਾਪਸ ਆਓ ਜੀ.</string>
   <string name="yesterday">ਕੱਲ</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">ਆਓ ਤੁਹਾਡਾ ਪਹਿਲਾ ਬਲੌਗ ਬਣਾਉਣ ਵਿੱਚ ਤੁਹਾਡੀ ਮਦਦ ਕਰੀਏ! ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਇੱਕ ਚੁਣੌਤੀ ਦੀ ਚੋਣ ਕਰੋ ਜਾਂ ਬਸ ਲਿਖਣ ਦੀ ਸ਼ੁਰੂਆਤ ਕਰੋ \'ਤੇ ਕਲਿੱਕ ਕਰੋ</string>
+  <string name="coachmark_article_2">ਤੁਸੀਂ ਆਪਣੀ ਜ਼ਰੂਰਤ ਦੇ ਅਨੁਸਾਰ ਚਿੱਤਰ ਸ਼ਾਮਲ ਕਰ ਸਕਦੇ ਹੋ ਅਤੇ ਕੰਟੇਂਟ ਨੂੰ ਫਾਰਮੈਟ ਕਰ ਸਕਦੇ ਹੋ</string>
+  <string name="coachmark_article_3">ਇਹ ਹੋ ਜਾਣ ਤੋਂ ਬਾਅਦ, ਆਪਣੀ ਕਹਾਣੀ ਪ੍ਰਕਾਸ਼ਤ ਕਰੋ</string>
+  <string name="coachmark_article_4">ਟੈਗਸ ਮਾਵਾਂ ਨੂੰ ਤੁਹਾਡੇ ਬਲੌਗ ਲੱਭਣ ਵਿੱਚ ਸਹਾਇਤਾ ਕਰਦੇ ਹਨ</string>
+  <string name="coachmark_article_5">ਦਿਲਚਸਪ ਚਿੱਤਰ ਵਾਲੇ ਬਲੌਗ ਨੂੰ ਪਾਠਕ ਵਧੇਰੇ ਪਸੰਦ ਕਰਦੇ ਹਨ</string>
+  <string name="yay_all_done">ਵਾਹ! ਤੁਹਾਡਾ ਕੰਮ ਪੂਰਾ ਹੋ ਗਿਆ ਹੈ</string>
+  <string name="view_moderation_guidelines">ਮੋਡਰੇਸ਼ਨ ਦਿਸ਼ਾ ਨਿਰਦੇਸ਼ ਦੀ ਜਾਂਚ ਕਰੋ</string>
+  <string name="get_tips_ideas">ਦੂਜੇ ਕ੍ਰਿਏਟਰਸ ਤੋਂ ਸੁਝਾਅ ਜਾਂ ਟਿਪਸ ਪ੍ਰਾਪਤ ਕਰੋ</string>
+  <string name="dont_stop_magic">ਤੁਹਾਡੀ ਕ੍ਰਿਏਟਿਵਿਟੀ ਦੇ ਜਾਦੂ ਨੂੰ ਰੁਕਣ ਨਾ ਦਵੋ</string>
+  <string name="join_creator_group"> ਕ੍ਰਿਏਟਰਸ ਹੈਂਗਆਊਟ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਵੋ</string>
+  <string name="create_more">ਹੋਰ ਬਣਾਓ</string>
+  <string name="go_to_blog">ਤੁਹਾਡੇ ਬਲੌਗ \'ਤੇ ਜਾਓ</string>
+  <string name="skip_the_tour">ਟੂਰ ਛੱਡੋ </string>
+  <string name="coachmark_story_1">ਆਓ ਤੁਹਾਡੀ ਪਹਿਲੀ 100 ਸ਼ਬਦਾਂ ਦੀ ਕਹਾਣੀ ਬਣਾਉਣ ਵਿੱਚ ਤੁਹਾਡੀ ਮਦਦ ਕਰੀਏ! ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਇੱਕ ਚੁਣੌਤੀ ਜਾਂ ਕੈਟੇਗਰੀ ਦੀ ਚੋਣ ਕਰੋ </string>
+  <string name="coachmark_story_2">ਆਪਣੀ ਪਸੰਦ ਦੀ ਬੈਕਗਰਾਊਂਡ ਚੁਣੋ</string>
+  <string name="coachmark_next">ਅਗਲਾ</string>
+  <string name="user_story_live"> ਤੁਹਾਡੀ 100 ਸ਼ਬਦਾਂ ਦੀ ਕਹਾਣੀ ਲਾਈਵ ਹੈ!</string>
+  <string name="click_to_upload_the_video">ਵੀਡੀਓ ਨੂੰ ਅਪਲੋਡ ਕਰਨ ਲਈ ਕਲਿੱਕ ਕਰੋ</string>
+  <string name="choose_interesting_title">ਦਰਸ਼ਕਾਂ ਦਾ ਧਿਆਨ ਖਿੱਚਣ ਲਈ ਇਕ ਦਿਲਚਸਪ ਟਾਈਟਲ ਲਿਖੋ</string>
+  <string name="coachmark_story_3">ਇਹ ਹੋ ਜਾਣ ਤੋਂ ਬਾਅਦ, ਆਪਣੀ ਪਹਿਲੀ 100 ਸ਼ਬਦਾਂ ਦੀ ਕਹਾਣੀ ਪ੍ਰਕਾਸ਼ਤ ਕਰੋ</string>
 </resources>
