--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1295,7 +1295,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">உங்கள் விருப்பத்திற்கு ஏற்ப கதையின் இடத்தை நகர்த்தலாம்  </string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1400,7 +1400,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">கேள்விகள் </string>
   <string name="original_content">உங்களின் சொந்த படைப்புக்களையே மாம்ஸப்ரெஸ்ஸோ தளத்தில் வெளியிட வேண்டும். வேறொருவரின் படைப்பையோ , அல்லது அதில் ஒரு பகுதியையோ நகலெடுத்து மாம்ஸ்ப்ரெஸ்ஸோ , தளத்தில் பதிவிடுவது ஏற்றுக்கொள்ளப் பட மாட்டாது.</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">சரி , புரிந்தது.</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1466,16 +1466,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">லீடர்போர்டு இன்னும் உருவாக்கப்படவில்லை. தயவுசெய்து நாளை திரும்பி வாருங்கள்.</string>
   <string name="yesterday">நேற்று</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">உங்கள் முதல் பதிவை உருவாக்க உதவி செய்கிறோம். சவாலை தேர்ந்தெடுத்து எழுதத் தொடங்குங்கள் ( அ ) எழுதத் தொடங்கவும்  க்ளிக் செய்யுங்கள். </string>
+  <string name="coachmark_article_2">படத்தைப்  பதிவேற்றி , உங்கள் விருப்பத்திற்கேற்ப  வடிவமைக்கலாம்.</string>
+  <string name="coachmark_article_3">முடித்த பின் வெளியிடுங்கள்.</string>
+  <string name="coachmark_article_4">தளத்தில் உள்ள அம்மாக்களை டேக் செய்து , உங்கள் பதிவுகளை கண்டறிய உதவுங்கள் </string>
+  <string name="coachmark_article_5">கண்கவர் படங்களுடைய பதிவுகள்  அதிக பார்வையாளர்களை பெறுகிறது </string>
+  <string name="yay_all_done">ஆஹா! வெற்றிகரமாக முடித்துவிட்டீர்கள். </string>
+  <string name="view_moderation_guidelines">தணிக்கைக்கான விதிமுறைகளை காண </string>
+  <string name="get_tips_ideas">சக  படைப்பாளர்களிடம் குறிப்புகள்  பெற </string>
+  <string name="dont_stop_magic">காட்டாறு போல் பாயும் உங்கள் படைப்பாற்றலுக்கு  அணைபோடாமல் எழுத்து வடிவம் கொடுங்கள்  </string>
+  <string name="join_creator_group">படைப்பாளர் ஆதரவு குழுவில் இணை </string>
+  <string name="create_more">இன்னும் படைக்க </string>
+  <string name="go_to_blog">உங்கள் பதிவை காண </string>
+  <string name="skip_the_tour">தவிர்</string>
+  <string name="coachmark_story_1">உங்கள் முதல் 100 வார்த்தை உருவாக்க உதவி செய்கிறோம். சவாலை தேர்ந்தெடுத்து எழுதத் தொடங்குங்கள் ( அ ) வகையை தேர்ந்தெடுத்து தொடங்குங்கள். </string>
+  <string name="coachmark_story_2">உங்களுக்குப் பிடித்த பின்னணி படத்தை தேர்வு செய்யலாம் </string>
+  <string name="coachmark_next">அடுத்து </string>
+  <string name="user_story_live">உங்கள் 100 வார்த்தை கதை தளத்தில் வெளியாகிவிட்டது.</string>
+  <string name="click_to_upload_the_video">காணொளியை பதிவேற்ற இங்கே க்ளிக் செய்யுங்கள் </string>
+  <string name="choose_interesting_title">கவர்ச்சியான தலைப்பு  பார்வையாளர் கவனத்தை ஈர்க்கும் </string>
+  <string name="coachmark_story_3">முடிந்த பின், 100 வார்த்தை கதையை வெளியிட.</string>
 </resources>
