--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1299,7 +1299,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_copy_link">COPY LINK</string>
   <string name="ss_story_link_copied">Story link copied</string>
   <string name="ss_image_loading_msg">Please wait for story background to be loaded</string>
-  <string name="story_coachmark_text">Position or move your story around as per your preference.</string>
+  <string name="story_coachmark_text">మీ ప్రాధాన్యత ప్రకారం మీ కథను ఉంచండి లేదా జరపండి</string>
   <string name="story_got_it">Got it</string>
   <string name="ss_coachmark_story_bg">Select background of your choice</string>
   <string name="ss_coachmarks_text_style">Change font size or text alignment</string>
@@ -1404,7 +1404,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">ప్రశ్నలు </string>
   <string name="original_content">దయచేసి మామ్స్ ప్రెస్సోలో మీ స్వంత  కంటెంట్‌ను మాత్రమే ప్రచురించండి. కాపీ చేయబడిన కంటెంట్ లేదా  పాక్షికంగా కూడా కాపీ చేయబడిన కంటెంట్ అంగీకరించబడదు</string>
-  <string name="ok_got_it">Ok, got It</string>
+  <string name="ok_got_it">సరే, అర్థమైంది</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
@@ -1470,16 +1470,24 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="empty_leaderboard_text">లీడర్‌బోర్డ్ ఇంకా సృష్టించబడలేదు. రేపు తిరిగి రండి.</string>
   <string name="yesterday">నిన్న</string>
   <string name="take_tour">TAKE THE TOUR</string>
-  <string name="coachmark_article_1">Let us help you create your first blog! Select a challenge to start with or simply click on start writing</string>
-  <string name="coachmark_article_2">You can add images and format the content as per your need</string>
-  <string name="coachmark_article_3">Once done publish your story</string>
-  <string name="coachmark_article_4">Tags help Moms discover your blog.</string>
-  <string name="coachmark_article_5">Blogs with an interesting image get more readership.</string>
-  <string name="yay_all_done">Yay! You are all done!</string>
-  <string name="view_moderation_guidelines">View Moderation Guidelines</string>
-  <string name="get_tips_ideas">Get tips or ideas from other creators</string>
-  <string name="dont_stop_magic">Don\'t stop all the magic you were creating</string>
-  <string name="join_creator_group">Join Creator\'s Hangout</string>
-  <string name="create_more">Create More</string>
-  <string name="go_to_blog">Go to your Blog</string>
+  <string name="coachmark_article_1">మీ మొదటి బ్లాగును రచించడానికి మా సహాయం తీసుకోండి! ప్రారంభించడానికి పోటీలను ఎంచుకోండి లేదా \'రచన ప్రారంభించండి\'పై క్లిక్ చేయండి </string>
+  <string name="coachmark_article_2">మీరు మీ అవసరానికి అనుగుణంగా చిత్రాలను జోడించవచ్చు మరియు కంటెంట్‌ను ఫార్మాట్ చేయవచ్చు</string>
+  <string name="coachmark_article_3">పూర్తయిన తర్వాత మీ రచన  ప్రచురించండి</string>
+  <string name="coachmark_article_4">ట్యాగ్ చేయడం ద్వారా తల్లులకు మీ బ్లాగును కనుగొనడంలో సహాయపడుతుంది </string>
+  <string name="coachmark_article_5">ఆసక్తికరమైన చిత్రంతో బ్లాగులు ఎక్కువ పాఠకులను పొందుతాయి</string>
+  <string name="yay_all_done">అవును! మీరు పూర్తి చేసారు</string>
+  <string name="view_moderation_guidelines">మోడరేషన్ మార్గదర్శకాలను చూడండి</string>
+  <string name="get_tips_ideas">ఇతరుల రచనల నుండి చిట్కాలు లేదా ఆలోచనలను పొందండి</string>
+  <string name="dont_stop_magic">మీరు మీ సృజనాత్మకతను ఆపవద్దు</string>
+  <string name="join_creator_group">ఇతర క్రియేటర్స్‌ని సంప్రదించండి </string>
+  <string name="create_more">మరిన్ని క్రియేట్ చేయండి </string>
+  <string name="go_to_blog">మీ బ్లాగుకు వెళ్లండి</string>
+  <string name="skip_the_tour">దాటవేయండి </string>
+  <string name="coachmark_story_1">మీ మొదటి 100 పదాల కథను రాయడానికి మా సహాయం తీసుకోండి. ప్రారంభించడానికి పోటీని లేదా వర్గాన్ని ఎంచుకోండి</string>
+  <string name="coachmark_story_2">మీకు నచ్చిన బ్యాక్గ్రౌండ్ ఎంచుకోండి</string>
+  <string name="coachmark_next">తరువాత</string>
+  <string name="user_story_live">గారు, మీ 100 పదాల కథ  ప్రచురింపబడింది </string>
+  <string name="click_to_upload_the_video">వీడియోను అప్‌లోడ్ చేయడానికి క్లిక్ చేయండి</string>
+  <string name="choose_interesting_title">వీక్షకుల దృష్టిని ఆకర్షించడానికి ఆసక్తికరమైన శీర్షికను ఉపయోగించండి</string>
+  <string name="coachmark_story_3">పూర్తయిన తర్వాత, మీ మొదటి 100 పదాల కథనాన్ని ప్రచురించండి!</string>
 </resources>
